helm/envs/policyController/policy.yaml
---
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8sdenyname
spec:
  crd:
    spec:
      names:
        kind: K8sDenyName
      validation:
        openAPIV3Schema:
          properties:
            invalidNamespace:
              type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sdenynames
        violation[{"msg": msg}] {
          input.review.object.metadata.namespace == input.parameters.invalidNamespace
          msg := sprintf("The namespace %v is not allowed", [input.parameters.invalidNamespace])
        }
---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDenyName
metadata:
  name: dont-use-kube-system
spec:
  parameters:
    invalidNamespace: "kube-system"
